force-app/main/default/objects/R360_Integration_Error__c/R360_Integration_Error__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Recoverable record-level integration failure without storing raw sensitive payloads.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>ControlledByParent</externalSharingModel><label>Resource 360 Integration Error</label><nameField><displayFormat>ERR-{00000}</displayFormat><label>Error Number</label><type>AutoNumber</type></nameField><pluralLabel>Resource 360 Integration Errors</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>