force-app/main/default/objects/R360_Integration_Error__c/fields/Error_Code__c.field-meta.xml
<CustomField><fullName>Error_Code__c</fullName><label>Error Code</label><length>80</length><required>true</required><type>Text</type></CustomField>