force-app/main/default/objects/R360_Integration_Error__c/fields/Error_Message__c.field-meta.xml
<CustomField><fullName>Error_Message__c</fullName><label>Redacted Error Message</label><length>2000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>