force-app/main/default/objects/R360_Integration_Error__c/fields/External_Record_ID__c.field-meta.xml
<CustomField><fullName>External_Record_ID__c</fullName><label>External Record ID</label><length>120</length><type>Text</type></CustomField>