force-app/main/default/objects/R360_Integration_Error__c/fields/Integration_Run__c.field-meta.xml
<CustomField><fullName>Integration_Run__c</fullName><label>Integration Run</label><referenceTo>R360_Integration_Run__c</referenceTo><relationshipLabel>Integration Errors</relationshipLabel><relationshipName>Integration_Errors</relationshipName><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>