force-app/main/default/objects/R360_Integration_Error__c/fields/Next_Retry_At__c.field-meta.xml
<CustomField><fullName>Next_Retry_At__c</fullName><label>Next Retry At</label><type>DateTime</type></CustomField>