force-app/main/default/objects/R360_Integration_Error__c/fields/Retry_Count__c.field-meta.xml
<CustomField><fullName>Retry_Count__c</fullName><defaultValue>0</defaultValue><label>Retry Count</label><precision>3</precision><scale>0</scale><type>Number</type></CustomField>