force-app/main/default/objects/R360_Integration_Error__c/fields/Row_Number__c.field-meta.xml
<CustomField><fullName>Row_Number__c</fullName><label>Row Number</label><precision>8</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>